# Schoo

./: CMakeLists.txt  README.md
assets/models/nagant2/: nagant2.gltf
sandBox/: CMakeLists.txt  sandbox.cpp
sandBox/shaders/: compile.bat  simpleShader.frag  simpleShader.vert
schoo/: buffer.hpp  camera.hpp  command.hpp  context.hpp  engine.cpp  engine.hpp  ioProcess.hpp  logSystem.hpp  model.hpp  renderProcess.hpp  renderResource.hpp  renderer.hpp  schoo.hpp  shader.hpp  swapchain.hpp  ui.hpp  utils.hpp  vertexData.hpp  window.hpp
schoo/function/anime/: anime_system.cpp  anime_system.hpp
schoo/function/reflection/: memberFunction.cpp  memberFunction.hpp  memberVariable.cpp  memberVariable.hpp  registry.cpp  registry.hpp  typeDescriptor.cpp  typeDescriptor.hpp
schoo/function/render/: camera.cpp  camera.hpp  light.hpp  renderResource.hpp  render_scene.hpp  render_system.cpp  render_system.hpp  render_types.cpp  render_types.hpp  res_loader.hpp  texture.cpp  texture.hpp  vertexData.hpp  window.cpp
schoo/function/render/passes/: fxaa_pass.cpp  fxaa_pass.hpp  mesh_pass.cpp  mesh_pass.hpp  outline_pass.cpp  outline_pass.hpp  shadowMap_pass.cpp  shadowMap_pass.hpp  ui_pass.cpp  ui_pass.hpp
schoo/function/render/vulkan/: buffer.cpp  buffer.hpp  command.cpp  context.cpp  context.hpp  renderPass.cpp  renderPass.hpp  shader.cpp  swapchain.cpp  swapchain.hpp  utils.cpp  utils.hpp
schoo/render/: buffer.hpp  camera.hpp  command.hpp  context.hpp  light.hpp  model.hpp  renderPass.hpp  renderResource.hpp  renderer.hpp  shader.hpp  swapchain.hpp  texture.hpp  utils.hpp  vertexData.hpp
schoo/render/passes/: mesh_pass.hpp  shadowMap_pass.hpp  ui_pass.hpp
schoo/resource/: asset_manager.cpp  asset_manager.hpp  gltfModel.cpp  gltfModel.hpp  objModel.cpp  objModel.hpp  res_type.hpp  uidAllocator.hpp
shader/: frag.spv  fxaa.frag  fxaa.vert  mesh.frag  mesh.vert  shader.frag  shader.vert  shadowmap.vert  vert.spv
source/: buffer.cpp  camera.cpp  command.cpp  context.cpp  engine.cpp  logSystem.cpp  mesh_pass.cpp  model.cpp  renderPass.cpp  renderProcess.cpp  renderer.cpp  schoo.cpp  shader.cpp  shadowMap_pass.cpp  swapchain.cpp  texture.cpp  ui.cpp  ui_pass.cpp  utils.cpp  window.cpp
src/: buffer.cpp  camera.cpp  command.cpp  context.cpp  ioProcess.cpp  renderProcess.cpp  renderer.cpp  schoo.cpp  shader.cpp  swapchain.cpp  texture.cpp  utils.cpp  window.cpp
